# dtm_client

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs
docs/: parity.md
examples/: barrier_redis.rs  dtmcli_saga.rs  dtmgrpc_saga.rs  workflow_grpc.rs  workflow_http.rs
proto/: dtmgimp.proto  wf.proto
proto/google/protobuf/: empty.proto
src/: barrier.rs  constants.rs  dtmcli.rs  dtmgrpc.rs  error.rs  lib.rs  types.rs  workflow.rs
