[package]
name = "dtm_client"
version = "0.1.0"
edition = "2024"
description = "Rust client for DTM (Distributed Transaction Manager) over HTTP and gRPC"
license = "MIT"
repository = "https://github.com/tonyher0/dtm_client"

[features]
default = ["http", "grpc", "workflow", "barrier-redis"]

http = ["dep:reqwest", "dep:url"]
grpc = ["dep:tonic", "dep:prost", "dep:prost-types", "dep:bytes"]
workflow = ["http", "grpc", "dep:base64", "dep:once_cell"]
barrier-redis = ["dep:redis"]

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "net", "rt-multi-thread", "time"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"

reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
url = { version = "2.5.4", optional = true }

tonic = { version = "0.12.3", features = ["transport"], optional = true }
prost = { version = "0.13.4", optional = true }
prost-types = { version = "0.13.4", optional = true }
bytes = { version = "1.9.0", optional = true }

redis = { version = "0.27.6", features = ["tokio-comp"], optional = true }
base64 = { version = "0.22.1", optional = true }
once_cell = { version = "1.20.2", optional = true }

tracing = "0.1.41"

[build-dependencies]
tonic-build = "0.12.3"

[dev-dependencies]
httpmock = "0.7.0"
tokio-stream = "0.1.17"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
