[package]
name = "dtm_client"
version = "0.1.0"
edition = "2024"
description = "Rust client for DTM (Distributed Transaction Manager) over HTTP and gRPC"
license = "MIT"
repository = "https://github.com/tonyher0/dtm_client"

[features]
default = ["http", "grpc", "workflow", "barrier-redis"]

http = ["dep:reqwest", "dep:url"]
grpc = [
    "dep:tonic",
    "dep:tonic-prost",
    "dep:prost",
    "dep:prost-types",
    "dep:bytes",
]
workflow = ["http", "grpc", "dep:base64", "dep:once_cell"]
barrier-redis = ["dep:redis"]

[dependencies]
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "time"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"], optional = true }
url = { version = "2.5.7", optional = true }

tonic = { version = "0.14.2", features = ["transport"], optional = true }
tonic-prost = { version = "0.14.2", optional = true }
prost = { version = "0.14.1", optional = true }
prost-types = { version = "0.14.1", optional = true }
bytes = { version = "1.11.0", optional = true }

redis = { version = "1.0.1", features = ["tokio-comp"], optional = true }
base64 = { version = "0.22.1", optional = true }
once_cell = { version = "1.21.3", optional = true }

tracing = "0.1.43"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
httpmock = "0.8.2"
tokio-stream = "0.1.17"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
